--- a/CODE/pca_explore.ipynb
+++ b/CODE/pca_explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -131,21 +131,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len(eigenvectors)=27\n"
+     ]
+    }
+   ],
    "source": [
     "pca = PCA(n_components=n - 1)\n",
     "pca.fit(particles_flat)\n",
     "\n",
     "eigenvectors = pca.components_      # Vecteurs propres\n",
     "eigenvalues = pca.explained_variance_  # Valeurs propres\n",
-    "explained_variance_ratios = pca.explained_variance_ratio_"
+    "explained_variance_ratios = pca.explained_variance_ratio_\n",
+    "\n",
+    "print(f\"{len(eigenvectors)=}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,14 +303,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PCA Exported !\n"
+      "PCA Exported !\n",
+      "27\n"
      ]
     }
    ],
@@ -319,7 +330,9 @@
     "    filename = os.path.join(OUTPUT_DIR, f'eigenvector_{i+1}.eig')\n",
     "    np.savetxt(filename, eigenvector, fmt='%f')\n",
     "    \n",
-    "print(\"PCA Exported !\")"
+    "print(\"PCA Exported !\")\n",
+    "\n",
+    "print(f\"{len(eigenvectors_reshaped)}\")"
    ]
   }
  ],
