--- a/CODE/pipeline.ipynb
+++ b/CODE/pipeline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -902,8 +902,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "================= GROOMING Variation 1/1 =================\n",
-      "{}\n",
+      "================= GROOMING Variation 1/2 =================\n",
+      "{'ICP_ITERATIONS': 50}\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "--- Step 1. Acquire Data ---\n",
       "  Nombre de shapes : 4\n",
@@ -915,14 +921,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Grooming shapes: 100%|██████████| 4/4 [00:36<00:00,  9.21s/it]\n"
+      "Grooming shapes: 100%|██████████| 4/4 [00:35<00:00,  8.99s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Grooming time: 36.85s\n",
+      "  Grooming time: 35.99s\n",
       "\n",
       "--- Step 3. Groom - Rigid Transformations ---\n",
       "  Image de référence trouvée : TEST2_FULGUR_008_181477_label_4\n"
@@ -932,87 +938,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Calcul des transformations: 100%|██████████| 4/4 [00:33<00:00,  8.47s/it]\n"
+      "Calcul des transformations:  75%|███████▌  | 3/4 [00:32<00:10, 10.98s/it]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Rigid time: 38.00s\n",
-      "\n",
-      "  >>> RUN 1 / G=1, O=1 <<<\n",
-      "   Optim params:{'number_of_particles': 16}\n",
-      "\n",
-      "  >>> RUN 1 : Optim + Analyse <<<\n",
-      "\n",
-      "--- Step 4. Optimize - Particle Based Optimization ---\n",
-      "Writing: c:\\Users\\sacha\\Desktop\\ECN\\0_PROJ_REDEV\\SOURCE\\CODE\\OUTPUT_PIPELINE\\GROOMING\\Groom_1\\OUTPUT\\groomed\\meshes\\TEST2_FULGUR_007_48871_label_4.vtk\n",
-      "Writing: c:\\Users\\sacha\\Desktop\\ECN\\0_PROJ_REDEV\\SOURCE\\CODE\\OUTPUT_PIPELINE\\GROOMING\\Groom_1\\OUTPUT\\groomed\\meshes\\TEST2_FULGUR_008_181477_label_4.vtk\n",
-      "Writing: c:\\Users\\sacha\\Desktop\\ECN\\0_PROJ_REDEV\\SOURCE\\CODE\\OUTPUT_PIPELINE\\GROOMING\\Groom_1\\OUTPUT\\groomed\\meshes\\TEST2_FULGUR_009_25705_label_4.vtk\n",
-      "Writing: c:\\Users\\sacha\\Desktop\\ECN\\0_PROJ_REDEV\\SOURCE\\CODE\\OUTPUT_PIPELINE\\GROOMING\\Groom_1\\OUTPUT\\groomed\\meshes\\TEST2_FULGUR_076_46061_left_label_4.vtk\n",
-      "  Lancement de l'optimisation via shapeworks...\n",
-      "\n",
-      "--- Step 5. PCA ---\n",
-      "  Forme des particules aplaties : (4, 48)\n",
-      "  PCA calculée et sauvegardée.\n",
-      "\n",
-      "--- Step 6. Metrics ---\n",
-      "  Calcul Specificity...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  Specificity modes: 100%|██████████| 3/3 [00:00<00:00, 11.51it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Calcul Generalization...\n",
-      "  RUN 1 terminé en 9.82s\n",
-      "\n",
-      "  >>> RUN 2 / G=1, O=2 <<<\n",
-      "   Optim params:{'number_of_particles': 32}\n",
-      "\n",
-      "  >>> RUN 2 : Optim + Analyse <<<\n",
-      "\n",
-      "--- Step 4. Optimize - Particle Based Optimization ---\n",
-      "Writing: c:\\Users\\sacha\\Desktop\\ECN\\0_PROJ_REDEV\\SOURCE\\CODE\\OUTPUT_PIPELINE\\GROOMING\\Groom_1\\OUTPUT\\groomed\\meshes\\TEST2_FULGUR_007_48871_label_4.vtk\n",
-      "Writing: c:\\Users\\sacha\\Desktop\\ECN\\0_PROJ_REDEV\\SOURCE\\CODE\\OUTPUT_PIPELINE\\GROOMING\\Groom_1\\OUTPUT\\groomed\\meshes\\TEST2_FULGUR_008_181477_label_4.vtk\n",
-      "Writing: c:\\Users\\sacha\\Desktop\\ECN\\0_PROJ_REDEV\\SOURCE\\CODE\\OUTPUT_PIPELINE\\GROOMING\\Groom_1\\OUTPUT\\groomed\\meshes\\TEST2_FULGUR_009_25705_label_4.vtk\n",
-      "Writing: c:\\Users\\sacha\\Desktop\\ECN\\0_PROJ_REDEV\\SOURCE\\CODE\\OUTPUT_PIPELINE\\GROOMING\\Groom_1\\OUTPUT\\groomed\\meshes\\TEST2_FULGUR_076_46061_left_label_4.vtk\n",
-      "  Lancement de l'optimisation via shapeworks...\n",
-      "\n",
-      "--- Step 5. PCA ---\n",
-      "  Forme des particules aplaties : (4, 96)\n",
-      "  PCA calculée et sauvegardée.\n",
-      "\n",
-      "--- Step 6. Metrics ---\n",
-      "  Calcul Specificity...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  Specificity modes: 100%|██████████| 3/3 [00:00<00:00, 13.89it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Calcul Generalization...\n",
-      "  RUN 2 terminé en 11.82s\n",
-      "\n",
-      "Sauvegarde des résultats dans le fichier Excel...\n",
-      "Fichier Excel sauvegardé : c:\\Users\\sacha\\Desktop\\ECN\\0_PROJ_REDEV\\SOURCE\\CODE\\OUTPUT_PIPELINE\\grid_search_results.xlsx\n",
-      "\n",
-      "Pipeline terminée en 97.89s (global).\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[72], line 75\u001b[0m\n\u001b[0;32m     72\u001b[0m     color_print(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mPipeline terminée en \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtotal_time\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124ms (global).\u001b[39m\u001b[38;5;124m\"\u001b[39m, Fore\u001b[38;5;241m.\u001b[39mGREEN, Style\u001b[38;5;241m.\u001b[39mBRIGHT)\n\u001b[0;32m     74\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m---> 75\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[72], line 40\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     36\u001b[0m color_print(\u001b[38;5;28mstr\u001b[39m(groom_params), Fore\u001b[38;5;241m.\u001b[39mBLUE)\n\u001b[0;32m     38\u001b[0m \u001b[38;5;66;03m# Rerun grooming\u001b[39;00m\n\u001b[0;32m     39\u001b[0m shape_seg_list, shape_filenames, dataset_ids, shape_names, \\\n\u001b[1;32m---> 40\u001b[0m rigid_transforms, groomed_files, t_groom, t_rigid \u001b[38;5;241m=\u001b[39m \u001b[43mrun_preprocessing\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     41\u001b[0m \u001b[43m    \u001b[49m\u001b[43mDATASET_PATHS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mSHAPE_EXT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgroom_params\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     42\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbase_dir\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgrooming_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mGroom_\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mig\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     43\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     45\u001b[0m \u001b[38;5;66;03m# On va stocker t_groom, t_rigid => on le recopie ensuite sur chaque run\u001b[39;00m\n\u001b[0;32m     46\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m io, optim_params \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(optim_combos, start\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m):\n",
+      "Cell \u001b[1;32mIn[67], line 111\u001b[0m, in \u001b[0;36mrun_preprocessing\u001b[1;34m(dataset_paths, shape_ext, grooming_params, base_dir)\u001b[0m\n\u001b[0;32m    108\u001b[0m shape_seg_list, shape_names, t_groom \u001b[38;5;241m=\u001b[39m groom_shapes(shape_filenames, dataset_ids, groom_dir)\n\u001b[0;32m    110\u001b[0m \u001b[38;5;66;03m# Rigid\u001b[39;00m\n\u001b[1;32m--> 111\u001b[0m rigid_transforms, groomed_files, t_rigid \u001b[38;5;241m=\u001b[39m \u001b[43mrigid_transformations\u001b[49m\u001b[43m(\u001b[49m\u001b[43mshape_seg_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshape_names\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgroom_dir\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    113\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (shape_seg_list, shape_filenames, dataset_ids, shape_names, \n\u001b[0;32m    114\u001b[0m         rigid_transforms, groomed_files, t_groom, t_rigid)\n",
+      "Cell \u001b[1;32mIn[67], line 59\u001b[0m, in \u001b[0;36mrigid_transformations\u001b[1;34m(shape_seg_list, shape_names, groom_dir)\u001b[0m\n\u001b[0;32m     56\u001b[0m     transform_filename \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(transform_dir, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mshape_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_to_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mref_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_transform.txt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     57\u001b[0m     np\u001b[38;5;241m.\u001b[39msavetxt(transform_filename, rigid_transform)\n\u001b[1;32m---> 59\u001b[0m     \u001b[43mshape_seg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mantialias\u001b[49m\u001b[43m(\u001b[49m\u001b[43mANTIALIAS_ITERATIONS\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcomputeDT\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgaussianBlur\u001b[49m(\u001b[38;5;241m1.5\u001b[39m)\n\u001b[0;32m     61\u001b[0m output_subdir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdistance_transforms\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     62\u001b[0m output_dir \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(groom_dir, output_subdir)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
